[package]
name = "tower"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { path = "../tokio/tokio", features = ["full"] }
hyper = { version = "1.0.0-rc.1", features = ["full"] }
thiserror = "1"
