[package]
name = "tower"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { path = "../tokio/tokio", features = ["full"] }
hyper = { version = "1.0.0-rc.3", features = ["full"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util", features = ["http1", "http2", "tcp", "client"] }
http-body = "1.0.0-rc.2"
http-body-util = "0.1.0-rc.2"
thiserror = "1"

